<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_grediant"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:padding="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/edtUserID"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/uid"
                android:textColor="@color/black"
                android:inputType="text"
                android:autofillHints="null"
                android:padding="10dp"
                android:background="@drawable/border"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:autofillHints="null"
                android:padding="10dp"
                android:background="@drawable/border"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_back"
                    android:layout_marginEnd="5dp"
                    android:textSize="18sp"
                    android:textColor="#FFFF"
                    android:text="@string/signUp"
                    android:id="@+id/btnSignUp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn"
                    android:textColor="#FFFF"
                    android:background="@drawable/button_back"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/btnSignIn"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/data"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>


</LinearLayout>