<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_grediant"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".HomePage">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:id="@+id/cvAdd"

        app:contentPadding="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/add"
                android:scaleType="fitXY"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:contentDescription="icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center_vertical"
                android:text="@string/add"
                android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/delete"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:contentDescription="icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center_vertical"
                android:text="@string/delete"
                android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/show"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:contentDescription="icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center_vertical"
                android:text="@string/show"
                android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/search"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:contentDescription="icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center_vertical"
                android:text="@string/search"
                android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>